fixed the name hover image covering our names

--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -267,5 +267,9 @@ section {
     width: 25%;
     position: relative;
   }
+  .mugshot:hover + .name{
+    padding-top:30px;
+    transition: all .4s;
+  }
 
 }
